Resources/namespace.yml

#namespace for PROD environment
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
